name:                pairing
version:             0.1.0.0
license-file:        LICENSE
author:              Stephen Diehl
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Params
    Fq
    Fr
    Fq2
    Fq6
    Fq12
    Point
    Group
    Pairing
    Test
  build-depends:
      base == 4.9.*
    , protolude
    , QuickCheck
    , pretty-show
    , bytestring >= 0.10
    , cryptonite >= 0.21
    , memory == 0.14.1
