name:                zkp
version:             0.1.0.0
license-file:        LICENSE
author:              Stephen Diehl
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Poly
    Gates
    
  build-depends:
      base       == 4.9.*
    , protolude  >= 0.1
    , bytestring == 0.10.*
    , cryptonite == 0.21
    , memory     == 0.14.1

